package ignoring spark